--- a/metadata.yaml
+++ b/metadata.yaml
@@ -39,5 +39,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'PT'
 - !lcsh 'Sweden -- Social life and customs -- 19th century -- Fiction'
+- GITenberg
 title: The Home; Or, Life in Sweden
 url: http://www.gutenberg.org/ebooks/20746
